// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MarkdownSlides should render correctly when using function syntax 1`] = `
<div>
  <Slide
    align="center center"
    key="md-slide-0"
    presenterStyle={Object {}}
    style={Object {}}
    viewerScaleMode={false}
  >
    <Markdown
      style={Object {}}
    >
      
## Slide A Title
    </Markdown>
  </Slide>
  <Slide
    align="center center"
    key="md-slide-1"
    presenterStyle={Object {}}
    style={Object {}}
    viewerScaleMode={false}
  >
    <Markdown
      style={Object {}}
    >
      ## Slide B Title
    
    </Markdown>
  </Slide>
</div>
`;

exports[`MarkdownSlides should render correctly when using tagged template literals 1`] = `
<div>
  <Slide
    align="center center"
    key="md-slide-0"
    presenterStyle={Object {}}
    style={Object {}}
    viewerScaleMode={false}
  >
    <Markdown
      style={Object {}}
    >
      ## Slide 1 Title
    </Markdown>
  </Slide>
  <Slide
    align="center center"
    key="md-slide-1"
    presenterStyle={Object {}}
    style={Object {}}
    viewerScaleMode={false}
  >
    <Markdown
      style={Object {}}
    >
      ## Slide 2 Title
    </Markdown>
  </Slide>
</div>
`;

exports[`MarkdownSlides should render correctly when using tagged template literals and string interpolation 1`] = `
<div>
  <Slide
    align="center center"
    key="md-slide-0"
    presenterStyle={Object {}}
    style={Object {}}
    viewerScaleMode={false}
  >
    <Markdown
      style={Object {}}
    >
      ## Slide 1 Title
This text is **bold**.
    </Markdown>
  </Slide>
  <Slide
    align="center center"
    key="md-slide-1"
    presenterStyle={Object {}}
    style={Object {}}
    viewerScaleMode={false}
  >
    <Markdown
      style={Object {}}
    >
      ## Slide 2 Title
    </Markdown>
  </Slide>
</div>
`;
